--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "sass": "^1.52.2",
+    "sass-loader": "^10.2.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
