--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
+    "@vue-hero-icons/outline": "^1.7.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "sass": "^1.52.2",
